# balmung-engine

./: .gitattributes  .gitignore  Balmung.sln  CMakeLists.txt  LICENSE  README.md  VoxelBlock.sln
VoxelBlock.Bridge/: VoxelBlock.Bridge.csproj  VoxelBlockEngine.cs
VoxelBlock.Editor/: App.axaml  CSharpRuntimeScripts.cs  Controls.cs  MainWindow.axaml  MainWindow.axaml.cs
bindings/python/: balmung_py.cpp
bridge/: BalmungAliases.cs  BalmungEngine.cs  BalmungNative.cs  bridge.csproj
bridge/Scripting/: BalmungScriptBehaviour.cs  CSharpScriptRuntime.cs  IBalmungScriptContext.cs
docs/: API_CSharp_Quickstart_EN.md  API_CSharp_Quickstart_TH.md  EDITOR_WORKFLOW_EN.md  EDITOR_WORKFLOW_TH.md  HOW_TO_BUILD.md  PIPELINE_TIERS_MATRIX_EN.md  PIPELINE_TIERS_MATRIX_TH.md  dependency.txt
editor/: App.axaml  App.axaml.cs  AssetTemplates.cs  CSharpRuntimeScripts.cs  Controls.cs  EditorViewportPanel.cs  LauncherWindow.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ProjectPipelines.cs  SceneEditing.cs  editor.csproj
engine/: README.md  engine_manifest.json  modules.cmake
engine/editor/: README.md  editor_module.cpp  editor_module.hpp
engine/editor/animation/: MODULE.md
engine/editor/audio/: MODULE.md
engine/editor/debugger/: MODULE.md
engine/editor/docks/: MODULE.md
engine/editor/export/: MODULE.md  game_export_pipeline.cpp  game_export_pipeline.hpp
engine/editor/gui/: MODULE.md  im_guizmo_integration_notes.md  viewport_render_controller.cpp  viewport_render_controller.hpp
engine/editor/import/: MODULE.md  asset_import_pipeline.cpp  asset_import_pipeline.hpp
engine/editor/settings/: MODULE.md  editor_project_settings.cpp  editor_project_settings.hpp
engine/font/: README.md  default_font.json
engine/scene/: README.md  scene_module.cpp  scene_module.hpp
engine/scene/2d/: MODULE.md  scene2d_batcher.cpp  scene2d_batcher.hpp
engine/scene/3d/: MODULE.md  pbr_gi_scene.cpp  pbr_gi_scene.hpp
experiments/: README.md
experiments/avalonia/: OpenGlViewport.cs
include/: engine.hpp
include/api/: balmung_capi.h  voxelblock_capi.h
include/core/: chunk.hpp  crafting.hpp  entity_manager.hpp  event_system.hpp  game_loop.hpp  inventory.hpp  player.hpp  save_manager.hpp  types.hpp  voxel.hpp  world.hpp
include/ecs/: components.hpp  entity.hpp  registry.hpp  systems.hpp
include/material/: material_system.hpp  material_types.hpp
include/physics/: physics_backend.hpp  physics_types.hpp  physics_world.hpp
include/renderer/: camera.hpp  mesh.hpp  renderer.hpp  shader.hpp  window.hpp
include/runtime/: post_process_graph.hpp  render_scene_2d.hpp  render_scene_3d.hpp  runtime_pipeline.hpp  scene_render_bridge.hpp
include/scene/: scene_document.hpp  scene_serializer.hpp
include/scripting/: lua_runtime.hpp
include/terrain/: block_palette.hpp  chunk_data.hpp  chunk_manager.hpp  light_propagation.hpp  packed_mesh.hpp  voxel_noise.hpp  voxel_terrain.hpp  voxel_types.hpp
include/ui/: sprite9slice.hpp  ui_canvas.hpp  ui_font.hpp  ui_input.hpp  ui_renderer.hpp  ui_system.hpp  ui_types.hpp
mods/: mystuff.lua
mods/examples/: hd2d_lighting.lua  init.lua  pbr_lite_2d.lua  rpg_events.lua
src/: engine.cpp  main.cpp
src/api/: balmung_capi.cpp  balmung_capi_stub.cpp  voxelblock_capi.cpp
src/core/: chunk.cpp  crafting.cpp  entity_manager.cpp  event_system.cpp  game_loop.cpp  inventory.cpp  player.cpp  save_manager.cpp  voxel.cpp  world.cpp
src/material/: material_system.cpp
src/physics/: physics_world.cpp
src/physics/backends/: astercore_physics_backend.cpp  null_physics_backend.cpp
src/renderer/: camera.cpp  mesh.cpp  renderer.cpp  shader.cpp  window.cpp
src/runtime/: post_process_graph.cpp  runtime_pipeline.cpp  scene_render_bridge.cpp
src/scene/: scene_serializer.cpp
src/scripting/: lua_runtime.cpp
src/ui/: sprite9slice.cpp  ui_canvas.cpp  ui_font.cpp  ui_input.cpp  ui_renderer.cpp  ui_system.cpp
src/voxel/: block_palette.cpp  chunk_data.cpp  chunk_manager.cpp  light_propagation.cpp  packed_mesh.cpp  voxel_noise.cpp  voxel_terrain.cpp
templates/assets/gameplay-csharp/: template.json
templates/assets/gameplay-csharp/source/: DialogueManager.cs  Inventory.cs  Level.cs  LevelUp.cs  Quest.cs  SaveGame.cs  gamepromt.txt
tools/: README.md  balmung_tool.py  bm_assets.py  bm_common.py  bm_export.py  bm_scene.py
